--- a/torobche-web/src/Component/SearchPage/SearchPageStyle.css
+++ b/torobche-web/src/Component/SearchPage/SearchPageStyle.css
@@ -38,6 +38,7 @@
     font-size: 20px;
     
 }
+
 .searchIcon{
     border-style: groove;
     border-left: hidden;
@@ -45,3 +46,84 @@
     width: 40px;
     background: white;
 }
+
+
+.signUp button{
+    margin-left: 60px;
+    width: 100px;
+    background: white;
+    height: 100%;
+    border-radius: 4px;
+    cursor: pointer;
+    color: #808080;
+    border: 1px solid #ccc;
+    height: 30px;
+}
+
+
+.ddown{
+    display: inline-flex;
+    margin-left: 55%;
+    
+}
+
+.ddown button{
+    font-size: 18px;
+    margin-left: 60px;
+    width: 100px;
+    background: white;
+    height: 100%;
+    border-radius: 4px;
+    cursor: pointer;
+    color: #808080;
+    border: 1px solid white;
+    height: 30px;
+    
+}
+.ddown button:hover{
+    color: red;
+}
+.dropdown{
+    margin-left: 50px;
+}
+
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .maincategory{
+    font-weight: bold;
+    color: black;
+}
+  .dropdown-content a {
+    float: none;
+    color: #808080;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: right;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+
+
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  .SearchPageHeader{
+      width: 100%;
+      background-color: white;
+      display:inline-flex;
+      height: 40px;
+  }
+
+ 
