--- a/torobche-web/src/Component/SearchPage/SearchPageStyle.css
+++ b/torobche-web/src/Component/SearchPage/SearchPageStyle.css
@@ -1,4 +1,4 @@
-.container{
+.container1{
     background-color: #F2F3F5;
     height: 1000px;
     width: 100%;
@@ -6,20 +6,20 @@
     Margin:0;
 }
 
-.SearchPageBody{
+.SearchPageBody1{
     position: absolute;
     top: 35%;
     left: 35%;
     padding: 10px;
 }
-.SearchPageBody img{
+.SearchPageBody1 img{
     margin-left: 45%;
 }
-.SearchBar{
+.SearchBar1{
     margin-top: 10px;
     display: flex;
 }
-.SearchBar input{
+.SearchBar1 input{
     height: 40px;
     width: 400px;
     border: hidden;
@@ -28,18 +28,18 @@
     font-size: 15px;
 
 }
-.SearchBar input:hover{
+.SearchBar1 input:hover{
 
 
 }
-.SearchBar i{
+.SearchBar1 i{
     margin-left: 3px;
     margin-top: 10px;
     font-size: 20px;
     
 }
 
-.searchIcon{
+.searchIcon1{
     border-style: groove;
     border-left: hidden;
     height: 42px;
@@ -48,7 +48,7 @@
 }
 
 
-.signUp button{
+.signUp1 button{
     margin-left: 60px;
     width: 100px;
     background: white;
@@ -61,13 +61,13 @@
 }
 
 
-.ddown{
+.ddown1{
     display: inline-flex;
     margin-left: 55%;
     
 }
 
-.ddown button{
+.ddown1 button{
     font-size: 18px;
     margin-left: 60px;
     width: 100px;
@@ -80,15 +80,15 @@
     height: 30px;
     
 }
-.ddown button:hover{
+.ddown1 button:hover{
     color: red;
 }
-.dropdown{
+.dropdown1{
     margin-left: 50px;
 }
 
 
-.dropdown-content {
+.dropdown-content1 {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -96,11 +96,11 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
-  .maincategory{
+  .maincategory1{
     font-weight: bold;
     color: black;
 }
-  .dropdown-content a {
+  .dropdown-content1 a {
     float: none;
     color: #808080;
     padding: 12px 16px;
@@ -109,17 +109,17 @@
     text-align: right;
   }
   
-  .dropdown-content a:hover {
+  .dropdown-content1 a:hover {
       color: red;
   }
 
 
   
-  .dropdown:hover .dropdown-content {
+  .dropdown1:hover .dropdown-content1 {
     display: block;
   }
 
-  .SearchPageHeader{
+  .SearchPageHeader1{
       width: 100%;
       background-color: white;
       display:inline-flex;
