--- a/torobche-web/src/Component/SearchPage/SearchPageStyle.css
+++ b/torobche-web/src/Component/SearchPage/SearchPageStyle.css
@@ -26,6 +26,7 @@
     border-style: groove;
     border-right: hidden;
     font-size: 15px;
+    border-radius: 3px 0px 0px 3px;
 
 }
 .SearchBar1 input:hover{
@@ -36,7 +37,6 @@
     margin-left: 3px;
     margin-top: 10px;
     font-size: 20px;
-    
 }
 
 .searchIcon1{
@@ -45,6 +45,8 @@
     height: 42px;
     width: 40px;
     background: white;
+    border-radius: 0px 3px 3px 0px;
+
 }
 
 
@@ -64,6 +66,7 @@
 .ddown1{
     display: inline-flex;
     margin-left: 55%;
+    
     
 }
 
