--- a/torobche-web/src/Component/MainPage/ShowProductPageStyle.css
+++ b/torobche-web/src/Component/MainPage/ShowProductPageStyle.css
@@ -77,6 +77,7 @@
   .PriceButton{
     border: hidden;
     border-style: groove;
+    margin-left: 30px;
       margin-top: 15px;
       height: 25px;
       width: 305px;
