--- a/torobche-web/src/Component/signUpandLogin/signUpandLoginStyle.css
+++ b/torobche-web/src/Component/signUpandLogin/signUpandLoginStyle.css
@@ -101,6 +101,7 @@
     letter-spacing: 1px;
     cursor: pointer;
     margin-top: 1rem;
+    margin-left: 30px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .signup-cta{
@@ -115,4 +116,5 @@
     font-size: 15px;
     font-weight: 600;
     margin-top: 10px;
+    width: 1000px;
 }
