--- a/torobche-web/src/App.css
+++ b/torobche-web/src/App.css
@@ -1,8 +1,10 @@
+@font-face {
+  font-family: 'vazir';
+  src: url(./fonts/Vazirmatn-Regular.ttf) format('truetype');
+}
 .App {
   text-align: center;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; 
+  font-family: 'vazir';
 }
