--- a/torobche-web/src/Component/SearchPage/SearchPageStyle.css
+++ b/torobche-web/src/Component/SearchPage/SearchPageStyle.css
@@ -1,9 +1,10 @@
 .container1{
     background-color: #F2F3F5;
-    height: 1000px;
+    height: 100%;
     width: 100%;
     Padding:0;
     Margin:0;
+    position: fixed;
 }
 
 .SearchPageBody1{
@@ -122,7 +123,7 @@
     display: block;
   }
 
-  .SearchPageHeader1{
+  .SearchPageHeader1{padding-top: 15px;
       width: 100%;
       background-color: white;
       display:inline-flex;
