--- a/torobche-web/src/Component/Card/Card.css
+++ b/torobche-web/src/Component/Card/Card.css
@@ -2,7 +2,7 @@
     background-color: white;
     width: 200px;
     height: 200px;
-    margin-left: 50px;
+    margin-right: 60px;
     margin-top: 20px;
     border-radius: 20px;
     margin-bottom: 10px;
