--- a/torobche-web/src/Component/ProfilePage/ProfilePageStyle.css
+++ b/torobche-web/src/Component/ProfilePage/ProfilePageStyle.css
@@ -1,5 +1,5 @@
 .logout{
-    margin-top: 20px;
+    margin-top: 100px;
     width: 170px; 
     margin-left: 30px;
     background-color: white;
@@ -9,6 +9,63 @@
 }
 .logout:hover{
     background-color: #B74F52;
+    border: hidden;
+    color: white;
+}
+
+.favirotP{
+    margin-top: 20px;
+    width: 170px; 
+    margin-left: 30px;
+    background-color: white;
+    color: #4f7eb7;
+    border: hidden;
+    border: 2px solid #4f7eb7;
+}
+.favirotP:hover{
+    background-color: #4f7eb7;
+    border: hidden;
+    color: white;
+}
+.myshopping{
+    margin-top: 20px;
+    width: 170px; 
+    margin-left: 30px;
+    background-color: white;
+    color: #4fb78a;
+    border: hidden;
+    border: 2px solid #4fb78a;
+}
+.myshopping:hover{
+    background-color: #4fb78a;
+    border: hidden;
+    color: white;
+}
+.lastseen{
+    margin-top: 20px;
+    width: 170px; 
+    margin-left: 30px;
+    background-color: white;
+    color: #b661b6;
+    border: hidden;
+    border: 2px solid #b661b6;
+}
+.lastseen:hover{
+    background-color: #b661b6;
+    border: hidden;
+    color: white;
+}
+.editPrf{
+    margin-top: 20px;
+    width: 170px; 
+    margin-left: 30px;
+    background-color: white;
+    color: #e6765a;
+    border: hidden;
+    border: 2px solid #e6765a;
+}
+.editPrf:hover{
+    background-color: #e6765a;
     border: hidden;
     color: white;
 }
